<resources>
    <string name="app_name">ProjectNES</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to MainActivity -->
    <string name="title_activity_main">Lobby</string>
    <string name="search_button">Search your room</string>
    <string name="temperature">Temperature:</string>
    <string name="light">Light:</string>
    <string name="send_your_opinion">Send your opinion</string>
    <string name="previouse_opinions">Previouse opinions</string>
    <string name="leave_the_room">Leave the room</string>
    <string name="room">Room:</string>
</resources>
