<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.francescop.projectnes.MainActivity"
    tools:showIn="@layout/activity_main"
    tools:layout_editor_absoluteY="8dp"
    tools:layout_editor_absoluteX="8dp" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search_button" />

            <Button
                android:id="@+id/buttonLeave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/leave_the_room" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:visibility="invisible">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewRoom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/room"
                        android:textSize="14pt"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewRoomVal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14pt"
                        android:textStyle="bold|italic" />
                </LinearLayout>

                <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="10pt"
                android:text="@string/send_your_opinion" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="9pt"
                        android:text="@string/temperature" />

                    <TextView
                        android:id="@+id/textViewTempVal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <SeekBar
                    android:id="@+id/seekBarTemp"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="6"
                    android:progress="3" />

                <TextView
                    android:id="@+id/textViewTempPar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textViewLum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="9pt"
                        android:text="@string/light" />

                    <TextView
                        android:id="@+id/textViewLumVal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <SeekBar
                    android:id="@+id/seekBarLum"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="6"
                    android:progress="3" />

                <TextView
                    android:id="@+id/textViewLumPar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/previouse_opinions"
                    android:textSize="10pt"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/prevTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="11" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
